@startuml

title __MODEL's Class Diagram__\n

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class IonCleavageException {
          + IonCleavageException()
      }
    }
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class Peak {
          - intensity : double
          - mz : double
          + Peak()
          + getIntensity()
          + getMz()
          + equals()
          + hashCode()
          + compareTo()
          + toString()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class PeakSet {
          + PeakSet()
          + PeakSet()
          {static} + getInstance()
          + splitWindow()
          + subSet()
          + getMzArray()
          + getIntensityArray()
          + getMaxIntensityPeak()
          + getTopIntensityPeak()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class IntensityComparator {
          + compare()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      interface PeptideIon {
          {abstract} + getPeptide()
          {abstract} + getCharge()
          {abstract} + getMass()
          {abstract} + getMassOverCharge()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class PeptideScore {
          - showWaterLoss : boolean
          - showAmmoniaLoss : boolean
          - tolerance : double
          + PeptideScore()
          + PeptideScore()
          + getIonPair()
          + setIonPair()
          + isShowWaterLoss()
          + setShowWaterLoss()
          + isShowAmmoniaLoss()
          + setShowAmmoniaLoss()
          + getTolerance()
          + setTolerance()
          + getProbability()
          - addProductIonListByCharge()
          + getProductIonSet()
          + getMatchedSet()
          + getDepthPeakSetList()
          + getScore()
          + getWeightedAvgScore()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      interface PrecursorIon {
          {abstract} + getProductIon()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      interface ProductIon {
          {abstract} + getType()
          {abstract} + getPrecursorIon()
          {abstract} + getCharge()
          {abstract} + getPosition()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class ProductIonSet {
          + ProductIonSet()
          + splitWindow()
      }
    }
  }
  

  package uk.ac.ebi.pride.utilities.iongen {
    package uk.ac.ebi.pride.utilities.iongen.model {
      class MZComparator {
          + compare()
      }
    }
  }
  

  IonCleavageException +-down- WrappedPrintWriter
  IonCleavageException +-down- WrappedPrintStream
  IonCleavageException +-down- PrintStreamOrWriter
  IonCleavageException +-down- SentinelHolder
  Peak -up-|> Comparable
  PeakSet -up-|> TreeSet
  PeakSet o-- ApproximateComparator : comparator
  PeakSet +-down- IntensityComparator
  IntensityComparator -up-|> Comparator
  PeptideScore o-- PeakSet : peakSet
  PeptideScore o-- PrecursorIon : precursorIon
  PeptideScore o-- ProductIonPair : ionPair
  ProductIonSet -up-|> TreeSet
  ProductIonSet +-down- MZComparator
  MZComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
